src/scss/block/dataview.scss
@import "~scss/_vars";

.blocks {
	.block.blockDataview { @include text-common; padding: 8px 0px 6px 0px; }
	.block.blockDataview {
		.wrapContent { z-index: 1; }

		#set-loader { margin: 24px auto; }
		.icon.plus { width: 20px; height: 20px; background-image: url('~img/icon/plus/menu0.svg'); }
		
		.icon.edit { 
			display: none; flex-shrink: 0; width: 20px; height: 20px; background-image: url('~img/icon/dataview/button/edit0.svg'); 
			background-size: 20px;
		}
		.icon.edit:hover { background-image: url('~img/icon/dataview/button/edit1.svg'); }

		.loadMore { 
			display: flex; align-items: center; @include text-small; line-height: 20px; width: 100%; margin-top: 10px; padding: 4px 2px; color: $colorDarkGrey;
			transition: $transitionAllCommon;
		}
		.loadMore {
			.icon { flex-shrink: 0; width: 20px; height: 20px; background-image: url('~img/arrow/loadMore0.svg'); }
		}

		.loadMore:hover { color: $colorBlack; }
		.loadMore:hover { 
			.icon { background-image: url('~img/arrow/loadMore1.svg'); }
		}

		.dataviewEmpty { 
			color: $colorDarkGrey; display: flex; align-items: center; justify-content: center; border-top: 1px solid $colorBorderLight; 
			text-align: center; padding: 16px 0px; height: 300px;
		}
		.dataviewEmpty.withHead { border-top: 0px; }
		.dataviewEmpty {
			.inner { width: 300px; }
			.name { font-weight: 500; margin: 0px 0px 2px 0px; }
			.descr { @include text-small; margin: 0px 0px 8px 0px; }
			.button { color: $colorBlack; }
		}

		.dataviewHead { display: flex; flex-direction: row; align-items: center; gap: 0px 2px; width: 100%; color: $colorBlack; }
		.dataviewHead {
			.icon.source { width: 28px; height: 28px; background-size: 24px; background-image: url('~img/icon/dataview/button/source0.svg'); opacity: 0; }
			.icon.source.active { opacity: 1; }

			.editableWrap { @include text-header2; height: 28px; max-width: calc(100% - 26px); @include text-overflow-nw; }
			.editableWrap.isEmpty { min-width: 90px; }
		}
		.dataviewHead.isEditing {
			.editableWrap { cursor: text; }
		}
		.dataviewHead.isDeleted {
			.editableWrap { color: $colorSecondary; }
			#head-source-select { display: none; }
		}
		.dataviewHead.isCollection {
			.editableWrap.isEmpty { min-width: 160px; }
		}

		.dataviewControls { font-weight: 500; color: $colorMediumGrey; position: relative; }
		.dataviewControls::after { content: ''; display: none; height: 1px; width: 100%; background: $colorBorderLight; position: absolute; bottom: 0px; }

		.dataviewControls.viewGrid::after, .dataviewControls.viewList::after { display: block; }

		.dataviewControls {
			> .sides { gap: 0px 16px; display: flex; flex-direction: row; align-items: center; justify-content: stretch; width: 100%; }
			> .sides {
				> .side { padding: 15px 0px; white-space: nowrap; line-height: 28px; display: flex; flex-direction: row; align-items: center; }
				> .side.left { flex-grow: 1; padding-left: 14px; }
				> .side.right { flex-shrink: 0; gap: 0px 4px; justify-content: flex-end; }
				> .side.right {
					.button { margin-left: 6px; }

					.buttonNewWrapper { margin-left: 6px; display: flex; }
					.buttonNewWrapper {
						.button { margin-left: 0; }
					}
					.buttonNewWrapper.withSelect {
						.button.addRecord { border-radius: 6px 0 0 6px; }
						.button.select {
							width: 24px; height: 28px; border: 0 solid; border-left: 1px solid rgba(255, 255, 255, .1); border-radius: 0 6px 6px 0;
						}
						.button.select:after { content: ''; position: absolute; left: 1px; top: 4px; width: 20px; height: 20px; background: url('~img/arrow/button/white.svg') 50% 50% no-repeat; }
					}
				}
			}

			.icon { position: relative; width: 28px; height: 28px; background-size: 20px; border-radius: 6px; transition: $transitionAllCommon; }
			.icon:hover, .icon.active { background-color: $colorHoverMedium; }

			.icon.btn-filter { background-image: url('~img/icon/dataview/button/filter0.svg'); }
			.icon.btn-filter.on { background-image: url('~img/icon/dataview/button/filter1.svg'); }
			.icon.btn-sort { background-image: url('~img/icon/dataview/button/sort0.svg'); }
			.icon.btn-sort.on { background-image: url('~img/icon/dataview/button/sort1.svg'); }
			.icon.btn-settings { background-image: url('~img/icon/dataview/button/settings.svg'); }

			.views { display: flex; gap: 0px 16px; flex-direction: row; align-items: center; justify-content: flex-start; }
			.views {
				.icon.plus { opacity: 0; }
			}

			.viewItem { 
				transition: color $transitionCommon; @include text-header3; font-weight: 700; @include text-overflow-nw; 
				max-width: 300px; color: $colorMediumGrey;
			}
			.viewItem { 
				.icon.arrow { width: 20px; height: 20px; background-image: url('~img/arrow/view.svg'); }
			}
			.viewItem:last-child { margin: 0px; }
			.viewItem:hover, .viewItem.active { color: $colorBlack; }
			.viewItem.isDragging { background: rgba(255,255,255,0.5); padding: 0px 4px; border-radius: 4px; width: auto !important; }

			.viewSelect { display: none; border: 0px; padding-left: 0px; color: $colorBlack; }
			.viewSelect {
				.icon:hover, .icon.active { background-color: transparent !important; }
			}

			.side.left.small {
				.views { display: none; }
				.viewSelect { display: inline-block; }
			}

			.button { padding: 0px 8px; @include text-common; }
		}
		.dataviewControls.isCollection {
			.side.left { padding-left: 20px; }
		}

		.dataviewSelection { font-weight: 400; display: none; }
		.dataviewSelection {
			.side.left { @include text-header3; color: $colorBlack;  }
			.side.right {
				.element {
					display: flex; flex-direction: row; align-items: center; gap: 0px 6px; border-radius: 4px; padding: 0px 6px 0px 4px;
					transition: $transitionAllCommon;
				}
				.element {
					.icon { width: 20px; height: 20px; }
					.icon.unlink { background-image: url('~img/icon/dataview/selection/unlink.svg'); }
					.icon.archive { background-image: url('~img/icon/menu/action/remove0.svg'); }
					.icon.done { background-image: url('~img/icon/dataview/selection/done.svg'); }
				}
				.element.black { color: $colorBlack; }
				.element.orange { color: #f09c0e; font-weight: 500; }
				.element:hover { background-color: $colorHoverMedium; }
			}
		}

		.content {
			.scroll { overflow-x: auto; overflow-y: visible; transform: translate3d(0px,0px,0px); padding-bottom: 14px; }
			.scrollWrap { background: #fff; }
		}

		.viewContent {
			.icon.drag { 
				z-index: 1; width: 7px; height: 12px; background-image: url('~img/icon/dataview/dnd.svg'); cursor: grab;
				position: absolute; top: 50%; margin: -6px 0px 0px 0px; left: 4px; opacity: 0; transition: opacity $transitionCommon;
			}
		}

		.hoverArea.active,
		.hoverArea:hover {
			.dataviewControls {
				> .sides {
					> .side.right { opacity: 1; }
				}

				.views {
					.icon.plus { opacity: 1; }
				}
			}
			.dataviewHead {
				> .sides {
					> .side.right { opacity: 1; }
				}

				#head-source-select { opacity: 1; }
			}
		}
	}

	.block.blockDataview.isInline {
		.wrapMenu > .icon.dnd { height: 60px; }

		.dataviewEmpty { height: auto; padding: 48px 0px; border-top: 1px solid $colorBorderLight; border-bottom: 1px solid $colorBorderLight; }

		.dataviewControls {
			> .sides {
				> .side { padding: 0px 0px 8px 0px; }
				> .side.left { display: flex; flex-direction: column; align-items: flex-start; gap: 4px 0px; }
				> .side.right { transition: opacity $transitionCommon; opacity: 0; }
			}

			.views { gap: 0px 12px; }
			.viewItem { @include text-common; font-weight: 500; }
			.button { margin-left: 6px; }

			.icon.plus { width: 20px; height: 20px; }
			.icon.plus:hover { background-color: transparent; }
		}
		.dataviewControls::after { display: none !important; }
		.dataviewControls.active {
			> .sides {
				> .side.right { opacity: 1; }
			}
		}

		.dataviewSelection {
			.side.left { @include text-paragraph; }
		}

		.content {
			.scroll { padding-bottom: 2px; }
		}
	}

	.block.blockDataview.showMenu {
		.dataviewHead {
			.icon.source { opacity: 1; }
		}
		.dataviewControls {
			> .sides {
				> .side.right { opacity: 1; }
			}
			.views {
				.icon.plus { opacity: 1; }
			}
		}
	}
	
}

html.platformWindows {
	.blocks {
		.block.blockDataview {
			.content {
				.scroll { overflow: overlay; }
			}
		}
	}
}

